# BlockSci

./: .gitignore  CMakeLists.txt  Doxyfile
0.6-noext/: changelog.html  compiling.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.html
0.6-noext/_modules/: blocksci.html  index.html
0.6-noext/_modules/blocksci/: currency.html  pickler.html
0.6-noext/reference/: reference.html
0.6-noext/reference/addresses/: address.html  addresses.html  equiv_address.html  types.html
0.6-noext/reference/chain/: block.html  blockchain.html  chain.html  input.html  output.html  tx.html
0.6-noext/reference/clustering/: cluster.html  cluster_manager.html  (+2 more)
Notebooks/: BlockSci Cross-Chain Clustering Demo.ipynb
benchmark/: main.cpp
blockscipy/src/: method_types.cpp  python_interface.cpp
docs/: 2018-11-12 - Implementation Proposal.md
example/ccc_analysis/: CMakeLists.txt  address_tags.cpp  cash_out_detection.cpp  ccc_analysis.cpp  ccc_comparison_quick.cpp  ccc_verfication.cpp  ccc_verfication2.cpp  clustering_count_edges.cpp  common_addresses_between_chains.cpp  common_addrs_forks.cpp  count_active_addresses.cpp  count_address_usage_types.cpp  get_addresses_by_scc_num.cpp  hidden_wealth.cpp  hidden_wealth_new.cpp  unspent_pre_fork_verify.cpp  untouched_forked.cpp
example/clustering_analysis/: CMakeLists.txt  clustering_analysis.cpp
example/fork_support/: CMakeLists.txt  fork_support.cpp
example/fork_support_test/: CMakeLists.txt  fork_support_test.cpp
example/sample_data_export/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/address/: address.cpp
src/chain/: block.cpp  block_range.cpp  blockchain.cpp  input.cpp  input_pointer.cpp  input_range.cpp  output.cpp  output_pointer.cpp  transaction.cpp  transaction_range.cpp
src/cluster/: cluster.cpp  cluster_manager.cpp
src/core/: chain_manager.cpp
src/internal/: address_index.cpp  address_index.hpp  chain_access.hpp  chain_configuration.cpp  chain_configuration.hpp  cluster_access.hpp  data_access.cpp  data_access.hpp  data_configuration.cpp  data_configuration.hpp  dedup_address_info.hpp  file_mapper.hpp  hash_index.hpp  progress_bar.hpp  script_access.hpp
src/scripts/: multisig_pubkey_script.cpp  multisig_script.cpp  nonstandard_script.cpp  nulldata_script.cpp  pubkey_script.cpp  script.cpp  script_variant.cpp  scripthash_script.cpp  witness_unknown_script.cpp
thesis/0.6-ext/: changelog.html  compiling.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  searchindex.js
thesis/0.6-noext/: genindex.html  objects.inv  search.html  searchindex.js  setup.html
tools/clusterer/: main.cpp
tools/integrity_check/: main.cpp
tools/mempool_recorder/: main.cpp
tools/parser/: CMakeLists.txt  address_db.cpp  address_state.cpp  address_state.hpp  address_writer.cpp  address_writer.hpp  basic_types.hpp  block_processor.cpp  block_processor.hpp  block_replayer.cpp  chain_index.hpp  hash_index_creator.cpp  main.cpp  parser_configuration.hpp  parser_index.hpp  preproccessed_block.cpp  script_input.cpp  script_output.cpp  script_output.hpp  utxo_address_state.hpp  utxo_state.hpp
(+182 files in other folders)
