cmake_minimum_required(VERSION 3.5)
project(ccc_analysis)

add_executable(ccc_analysis EXCLUDE_FROM_ALL ccc_analysis.cpp address_tags.cpp)
add_executable(clustering_count_edges EXCLUDE_FROM_ALL clustering_count_edges.cpp)
add_executable(ccc_verfication EXCLUDE_FROM_ALL ccc_verfication.cpp)
add_executable(ccc_verfication2 EXCLUDE_FROM_ALL ccc_verfication2.cpp)

target_link_libraries( ccc_analysis blocksci blocksci_internal)
target_link_libraries( clustering_count_edges blocksci blocksci_internal)
target_link_libraries( ccc_verfication blocksci blocksci_internal)
target_link_libraries( ccc_verfication2 blocksci blocksci_internal)
