cmake_minimum_required(VERSION 3.5)
project(ccc_analysis)

add_executable(ccc_analysis EXCLUDE_FROM_ALL ccc_analysis.cpp address_tags.cpp)
add_executable(clustering_count_edges EXCLUDE_FROM_ALL clustering_count_edges.cpp)
add_executable(ccc_verfication EXCLUDE_FROM_ALL ccc_verfication.cpp)
add_executable(ccc_verfication2 EXCLUDE_FROM_ALL ccc_verfication2.cpp)
add_executable(ccc_comparison_quick EXCLUDE_FROM_ALL ccc_comparison_quick.cpp)
add_executable(common_addresses_between_chains EXCLUDE_FROM_ALL common_addresses_between_chains.cpp)
add_executable(common_addrs_forks EXCLUDE_FROM_ALL common_addrs_forks.cpp)
add_executable(get_addresses_by_scc_num EXCLUDE_FROM_ALL get_addresses_by_scc_num.cpp)
add_executable(count_active_addresses EXCLUDE_FROM_ALL count_active_addresses.cpp)
add_executable(hidden_wealth EXCLUDE_FROM_ALL hidden_wealth.cpp)
add_executable(hidden_wealth_new EXCLUDE_FROM_ALL hidden_wealth_new.cpp)
add_executable(unspent_pre_fork_verify EXCLUDE_FROM_ALL unspent_pre_fork_verify.cpp)
add_executable(cash_out_detection EXCLUDE_FROM_ALL cash_out_detection.cpp)

target_link_libraries( ccc_analysis blocksci blocksci_internal)
target_link_libraries( clustering_count_edges blocksci blocksci_internal)
target_link_libraries( ccc_verfication blocksci blocksci_internal)
target_link_libraries( ccc_verfication2 blocksci blocksci_internal)
target_link_libraries( ccc_comparison_quick blocksci blocksci_internal)
target_link_libraries( common_addresses_between_chains blocksci blocksci_internal)
target_link_libraries( common_addrs_forks blocksci blocksci_internal)
target_link_libraries( get_addresses_by_scc_num blocksci blocksci_internal)
target_link_libraries( count_active_addresses blocksci blocksci_internal)
target_link_libraries( hidden_wealth blocksci blocksci_internal)
target_link_libraries( hidden_wealth_new blocksci blocksci_internal)
target_link_libraries( unspent_pre_fork_verify blocksci blocksci_internal)
target_link_libraries( cash_out_detection blocksci blocksci_internal)
